fix ie layout bug
git-svn-id: file:///www/metaways/svn.tine20.org/repo/trunk@9253 8d11cdf3-9d2f-0410-bbb5-e098f187f06b

--- a/tine20/Calendar/css/daysviewpanel.css
+++ b/tine20/Calendar/css/daysviewpanel.css
@@ -44,6 +44,7 @@
     font-weight:normal;
     line-height:normal;
     white-space:nowrap;
+    overflow: hidden;
 }
 
 .cal-daysviewpanel-dayheader-day-wrap {
